2002-12-10  David N. Welton  <davidw@dedasys.com>

	* table.png: Transformed table.png so that it ought to display
	correctly on older(?) browsers.  Thanks to Elchonon Edelson for
	his help.

2002-12-09  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_SendContent): Switched from EvalObj to
	EvalObjEx.
	(Rivet_SendContent): EXPERIMENTAL: added Mutex locks on
	SendContent, in order to keep windows safe.  This needs testing
	out!

2002-12-04  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_GetEnvVars): Put DecrRefCount back in
	- must have taken it out by mistake while hunting a previous
	memory leak.

2002-11-23  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_SendContent): Set up information for
	[info script] by using r->filename.

2002-11-19  David N. Welton  <davidw@dedasys.com>

	* doc/examples/table.rvt: Fixed up format operation to make nicer
	tables.

2002-11-18  David N. Welton  <davidw@dedasys.com>

	* cvsversion.tcl (main): Added catch to make sure that VERSION has
	something in it and isn't.

2002-11-09  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Make docs reflect behavior of 'var get foobar'
	when foobar doesn't exist - "" is returned.

	* tests/apachetest/apachetest.tcl: Updates to testing utility
	procedures.

2002-11-04  David N. Welton  <davidw@dedasys.com>

	* tests/get.test: Backed out changes to 'var get': no longer
	throws an error if the variable does not exist, but instead
	returns "".  Use 'var exists' to see if it really exists or not.

	* src/mod_rivet.c (Rivet_ChildExit): Add call to Tcl_Finalize.
	This still needs more investigation.

	* tests/upload.test: Added proper end boundary to upload test.

	* src/apache_*: New apache request code from upstream.

2002-10-29  David N. Welton  <davidw@dedasys.com>

	* src/rivetWWW.c (Rivet_EscapeStringCmd): Eliminate warning on
	Solaris by casting a char to an int.

2002-10-28  David N. Welton  <davidw@dedasys.com>
