@@ -1,3 +1,11 @@
+2002-12-13  David N. Welton  <davidw@dedasys.com>
+
+	* src/mod_rivet.c (Rivet_InitTclStuff): Apache actually loads all
+	the modules twice, just to see if it  can. This is a pain,
+	because things don't seem to get  completely cleaned up on the
+	Tcl side. So this little hack  should make us *really* load only
+	the second time around.
+
 2002-12-10  David N. Welton  <davidw@dedasys.com>
 
 	* table.png: Transformed table.png so that it ought to display
